--- a/templates/leader_checked/_form.html.twig
+++ b/templates/leader_checked/_form.html.twig
@@ -4,7 +4,7 @@
                 <h1>Validation camion</h1>
             </div>
             <div class="col md-6" style="margin-bottom: 20px;">
-                <span id="span-cariste">Attention, la validation de ce formulaire engage votre responsabilitée</span>
+                <span id="span-cariste">Attention, la validation de ce formulaire engage votre responsabilité</span>
             </div>
     <div class="container ">
         <div class="row">
