--- a/public/css/driver.css
+++ b/public/css/driver.css
@@ -122,3 +122,15 @@ tbody:hover tr:hover td {
         line-height: 150px;
 }
 
+h1 {
+    font-size: 50px;
+    text-shadow: -1px -1px #eee, 1px 1px #888, -3px 0 4px #000;
+    font-family: 'Segoe print', Arial, Helvetica, sans-serif;
+    color: #ccc;
+    padding: 50px;
+    letter-spacing: 0.2rem;
+    font-weight: lighter;
+    text-align: center;
+    display: inline;
+    line-height: 150px;
+}
