--- a/templates/driver_checked/_form.html.twig
+++ b/templates/driver_checked/_form.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col md-12">
                 <h1>Contrôle camion</h1>
-                <span id="span-cariste">Attention la validation de ce formulaire engage votre responsabilitée</span>
+                <span id="span-cariste">Attention la validation de ce formulaire engage votre responsabilité</span>
             </div>
         </div>
         <div class="row">
