--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -5,9 +5,13 @@
 {% block navbar %}
     <nav class="navMenu">
         <a href="/">Accueil</a>
-        <a href="/calendar/view">Planning</a>
-        <a href="/driver">Planning Caristes</a>
+        {% if app.user and 'ROLE_LOREAL' in app.user.roles %}
+        <a href="/loreal">Planning Loreal</a>
+        {% endif%}
         {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
+        <a href="/calendar/view">Planning</a>
+        <a href="/loreal">Planning Loreal</a>
+        <a href="/driver">Planning Caristes</a>
         <a href="/admin">Configuration</a>
         {% elseif app.user and 'ROLE_USER' not in app.user.roles %}
         <a href="/admin">Configuration</a>
