--- a/templates/calendar/edit.html.twig
+++ b/templates/calendar/edit.html.twig
@@ -190,6 +190,9 @@
                         <div class="col md-6">
                             {{ form_row(form.comment) }}
                         </div>
+                        <div class="col md-6">
+                            {{ form_row(form.contentTruck) }}
+                        </div>
                     </div>
                     <div class="row color">
                         <div class="col md-6">
