add filter by date update calendar form title and format time

--- a/templates/check_list_validator/index.html.twig
+++ b/templates/check_list_validator/index.html.twig
@@ -76,7 +76,7 @@
                         <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
                     </div>
                     <div class="col-md-6">
-                        <button class="green" type="button" onclick="window.location.href='/calendar/view'">Valider la réception</button>
+                        <button class="green" type="button" onclick="window.location.href='/calendar/building/manager'">Valider la réception</button>
                     </div>
                 </fieldset>
             </div>
