--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -11,7 +11,7 @@
 
         {% endif%}
         {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
-        <a href="/calendar/view">Planning</a>
+        {# <a href="/calendar/view">Planning</a> #}
         <a href="/calendar/building/manager">Planning quais</a>
         <a href="/loreal">Planning L'Oreal</a>
         <a href="/driver">Planning Caristes</a>
