--- a/templates/calendar/new.html.twig
+++ b/templates/calendar/new.html.twig
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-6">
             <h1>Création</h1>
-            <button class="blue" type="button" onclick="window.location.href='/calendar/view'">Retour au calendrier</button>
+            <button class="blue" type="button" onclick="window.location.href='/calendar/building/manager'">Retour au planning quais</button>
                 {{ include('calendar/_form.html.twig') }}
             </div>
     </div>
