--- a/templates/main/building-manager.html.twig
+++ b/templates/main/building-manager.html.twig
@@ -21,11 +21,29 @@
     {% for buildingName, events in rdvsByBuilding %}
     {% set buildingNames = buildingNames|merge([buildingName]) %}
     {% endfor %}
-
+    {% set customers = [] %}
+    {% for buildingName, events in rdvsByBuilding %}
+    {% for event in events %}
+    {% set customer = event.customer %}
+    {% if customer not in customers %}
+    {% set customers = customers|merge([customer]) %}
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
+    
     <div class="filters">
         <form action="{{ path('app_building_manager') }}" method="GET">
             <label for="date">Filtre par date :</label>
             <input type="date" name="date" id="date" value="{{ app.request.query.get('date', now|date('Y-m-d')) }}" />
+            <label for="customer">Filtre par client :</label>
+            <select name="customer" id="customer">
+                <option value="all" {% if not app.request.query.get('customer') or app.request.query.get('customer')=='all'
+                    %}selected{% endif %}>Tous</option>
+                {% for customer in customers|sort %}
+                <option value="{{ customer }}" {% if app.request.query.get('customer')==customer %}selected{% endif %}>{{
+                    customer }}</option>
+                {% endfor %}
+            </select>
             <button class="btn btn-success" type="submit">Filtrer</button>
         </form>
     </div>
@@ -44,8 +62,11 @@
         <tr>
             <td>{{ i }}h00-{{ i+1 }}h00</td>
             {% for buildingName in buildingNames|sort %}
-                {% set events = rdvsByBuilding[buildingName]|filter(event => event.start|date('Y-m-d') ==
-                app.request.query.get('date')) %}
+                {% set events = rdvsByBuilding[buildingName] %}
+                {% if app.request.query.get('customer') != 'all' %}
+                {% set events = events|filter(event => event.customer == app.request.query.get('customer')) %}
+                {% endif %}
+                {% set events = events|filter(event => event.start|date('Y-m-d') == app.request.query.get('date')) %}
                 {% set eventFound = false %}
                 {% for event in events %}
                     {% set eventStartHour = event.start|date('H') %}
