add qualiservice image and disable loreal account

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,10 @@
 body {
     color: var(--white-gr);
     background-color: var(--dark-blue);
+    background-image: url('../image/qualiservice.png');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     overflow-x: hidden;
 }
 
