add tome slots to export csv

--- a/templates/loreal/index.html.twig
+++ b/templates/loreal/index.html.twig
@@ -13,6 +13,25 @@
 
 <div class="card-deck">
     <h1>Planning détaillé L'Oréal</h1>
+    <div class="container">
+        <form action="{{ path('app_loreal_export') }}" method="get">
+            <div class="row">
+                <div class="col md-4">
+                    <label for="start_date">Date de début export :</label>
+                    <input type="date" name="start_date" id="start_date" class="form-control"
+                        value="{{ app.request.query.get('start_date') }}" required>
+                </div>
+                <div class="col md-4">
+                    <label for="end_date">Date de fin export :</label>
+                    <input type="date" name="end_date" id="end_date" class="form-control"
+                        value="{{ app.request.query.get('end_date') }}" required>
+                </div>
+                <div class="col md-4">
+                    <button type="submit" class="btn btn-primary mt-4">Exporter en CSV</button>
+                </div>
+            </div>
+        </form>
+    </div>
     {# <div class="container">
         <form method="get" action="{{ path('app_loreal') }}">
             <label for="start_date">Filtrer par date:</label>
@@ -24,7 +43,6 @@
     
     {% set events = events|filter(event => event.start|date('Y-m-d') == app.request.query.get('date')|default(now|date('Y-m-d'))) %} #}
     <div class="container">
-        <a href="{{ path('app_loreal_export', { 'start_date': app.request.query.get('start_date'), 'end_date': app.request.query.get('end_date') }) }}" class="btn btn-primary">Exporter en CSV</a>
         <form method="get" action="{{ path('app_loreal') }}">
             <label for="start_date">Filtrer par date:</label>
             <input type="date" name="start_date" id="start_date" value="{{ app.request.query.get('start_date')|default(now|date('Y-m-d')) }}" />
@@ -38,8 +56,7 @@
                 <thead>
                     <tr>
                         <th>Type</th>
-                        <th>Arrivée Qualiservice</th>
-                        <th>Départ Qualiservice</th>
+                        <th>Arrivée ou départ camion prévue</th>
                         <th>Numéro LS</th>
                         <th>Nbr de palettes</th>
                         <th>Contenu du camion</th>
@@ -51,12 +68,7 @@
                     {% for event in events %}
                     <tr>
                         <td>{{ event.title}}</td>
-                        {% if event.title == 'Reception'%}
                         <td>{{ event.start|date('d-m-Y H:i:s')}}</td>
-                        {% endif %}
-                        {% if event.title == 'Expedition'%}
-                        <td>{{ event.start|date('d-m-Y H:i:s')}}</td>
-                        {% endif%}
                         <td>{{ event.command_number }}</td>
                         <td>{{ event.pallets_number }}</td>
                         <td>{{ event.content_truck }}</td>
