--- a/templates/loreal/index.html.twig
+++ b/templates/loreal/index.html.twig
@@ -11,7 +11,7 @@
 {% include "./partials/_navbar.html.twig" %}
 {% endblock navbar %}
 
-<div class="card-deck">
+<div class="card-deck" style="padding-top: 55px;">
     <h1>Planning détaillé L'Oréal</h1>
     <div class="container">
         <form action="{{ path('app_loreal_export') }}" method="get">
