--- a/templates/main/building-manager.html.twig
+++ b/templates/main/building-manager.html.twig
@@ -1,20 +1,16 @@
 {% block stylesheets %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{{ asset('css/building_manager.css') }}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ asset('css/building_manager.css') }}" />
 {% endblock %}
-
+{% block navbar %}
+{% include "./partials/_navbar.html.twig" %}
+{% endblock navbar %}
 {% block Body %}
-<div class="container" style="margin-top: 45px;">
-
-    {% block navbar %}
-    {% include "./partials/_navbar.html.twig" %}
-    {% endblock navbar %}
-</div>
-<div class="container">
+<div class="container" style="padding-top: 85px;">
     <h1>Planning des quais</h1>
 
     {% set buildingNames = [] %}
