--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -15,7 +15,7 @@
     </div>
 {% endif%}
 {% if app.user and 'ROLE_LOREAL' in app.user.roles %}
-    <div class="container">
+    <div class="container" style="padding-top: 65px;">
         <div class="row">
             <div class="col-md-12" id="loreal"></div>
         </div>
