--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,33 +1,61 @@
-{# navbar #}
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-2imU6zjZ6JfU1lhnUyLxNlmKZX+CX6Nv8NnE/6UhtZ6Urr/o/omhcx6MfLxoyTGWyAFOGAsiQmRlHTKjXzdzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</head>
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
 {% endblock %}
 {% block navbar %}
-    <nav class="navMenu">
-        {# <a href="/">Accueil</a> #}
-        {% if app.user and 'ROLE_LOREAL' in app.user.roles %}
-        <a href="/calendar/view">Planning</a>
-        <a href="/loreal">Planning Détaillé</a>
-
-        {% endif%}
-        {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
-        {# <a href="/calendar/view">Planning</a> #}
-        <a href="/calendar/building/manager">Planning quais</a>
-        <a href="/loreal">Planning L'Oreal</a>
-        <a href="/driver">Planning Caristes</a>
-        <a href="/admin">Configuration</a>
-        {% elseif app.user and 'ROLE_USER' not in app.user.roles %}
-        <a href="/admin">Configuration</a>
-        {% endif %}
-        {% if app.user and 'ROLE_SUPER_ADMIN' in app.user.roles %}
-        <a href="/admin">Configuration</a>
-        {% endif %}
-        <div class="dot"></div>
-        {% if app.user %}
-        <a class="btn btn-danger" href="{{ path('app_logout') }}">Déconnectez vous {{ app.user.userIdentifier }} </a>
-        {# {% else %}
-        <a class="btn btn-success" href="{{ path('app_login') }}">Connexion</a> #}
-        {% endif %}
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                {% if app.user and 'ROLE_LOREAL' in app.user.roles %}
+                <li><a href="{{path('app_calendar')}}">Planning</a></li>
+                <li><a href="{{path('app_loreal')}}">Planning Détaillé</a></li>
+                {% endif%}
+                {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
+                <li class="dropdown">
+                    <a class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" href="#0">Planning clients</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="{{path('app_loreal')}}">Loreal</a></li>
+                        <li><a class="dropdown-item" href="#">Goliate</a></li>
+                        <li><a class="dropdown-item" href="#">Guerresheismer</a></li>
+                    </ul>
+                </li>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Dropdown button
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+                <li><a href="/calendar/building/manager">Planning quais</a></li>
+                <li><a href="{{path('app_driver')}}">Planning caristes</a></li>
+                <li><a href="{{path('admin')}}">Configuration</a></li>
+                
+                {% endif%}
+                <li>{% if app.user %}
+                {# <a class="btn btn-danger" href="{{ path('app_logout') }}">Déconnectez vous {{ app.user.userIdentifier }} </a> #}
+                <a id="link-logout" href="{{ path('app_logout') }}">
+                    <i id="logout" class="fa fa-sign-out"></i> Déconnexion {{ app.user.userIdentifier }}
+                </a>
+                {# {% else %}
+                <a class="btn btn-success" href="{{ path('app_login') }}">Connexion</a> #}
+                {% endif %}</li>
+            </ul>
+        </div>
     </nav>
 {% endblock navbar %}
 
