--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,7 +2,13 @@
 
 {% block title %}Creation de compte{% endblock %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('css/register.css') }}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ asset('css/register.css') }}" />
 {% endblock %}
 {% block body %}
 <div class="wrapper fadeInDown">
@@ -16,20 +22,44 @@
         <!-- register Form -->
         <div class="container">
             <h1>Créer un compte</h1>
-
             {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.email) }}
-            {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-            }) }}
+            <div class="input-group">
+                {{ form_widget(registrationForm.plainPassword, { 'attr': {'class': 'form-control password-field',
+                'placeholder':
+                'Mot de passe'} }) }}
+                {# <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="show_password">
+                        <i class="fa fa-eye"></i>
+                    </button>
+                </div> #}
+            </div>
             <button type="submit" class="btn btn-success">Valider</button>
             {{ form_end(registrationForm) }}
         </div>
 
-        <!-- Remind Passowrd -->
+        <!-- Remind Password -->
         <div id="formFooter">
         </div>
 
     </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+<script>
+    $(document).ready(function () {
+            $('#show_password').click(function () {
+                var passwordField = $('.password-field');
+                var passwordFieldType = passwordField.attr('type');
+                if (passwordFieldType === 'password') {
+                    passwordField.attr('type', 'text');
+                    $(this).children().removeClass('fa-eye').addClass('fa-eye-slash');
+                } else {
+                    passwordField.attr('type', 'password');
+                    $(this).children().removeClass('fa-eye-slash').addClass('fa-eye');
+                }
+            });
+        });
+</script>
 {% endblock %}
